update docs to reference tulsa and local npm

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 				</ul>
 			</header>
 
-			<h1>London Squared</h1>
+			<h1>Tulsa Squared</h1>
 
       <div role="main" class="content project">
       {{ content }}
