--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-49988573-3"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -34,7 +33,7 @@
 				</ul>
 			</header>
 
-			<h1>London Squared</h1>
+			<h1>Tulsa Squared</h1>
 
       <div role="main" class="content project">
       {{ content }}
